--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 requires-python = ">=3.12"
 dependencies = [
     "asyncpg>=0.31.0",
+    "azure-search-documents>=11.6.0",
     "fastapi[standard]>=0.128.0",
     "openai>=2.16.0",
     "pandas>=3.0.0",
