--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,4 +14,5 @@ dependencies = [
     "psycopg2-binary>=2.9.11",
     "requests>=2.32.5",
     "sqlalchemy[asyncio]>=2.0.46",
+    "tenacity>=9.1.2",
 ]
