--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pandas>=3.0.0",
     "pgvector>=0.4.2",
     "psycopg2-binary>=2.9.11",
+    "pytest>=9.0.2",
     "requests>=2.32.5",
     "sqlalchemy[asyncio]>=2.0.46",
     "tenacity>=9.1.2",
