--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "pgvector>=0.4.2",
     "psycopg2-binary>=2.9.11",
     "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
     "requests>=2.32.5",
     "sqlalchemy[asyncio]>=2.0.46",
     "tenacity>=9.1.2",
