--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,5 +16,6 @@ dependencies = [
     "pytest-asyncio>=1.3.0",
     "requests>=2.32.5",
     "sqlalchemy[asyncio]>=2.0.46",
+    "tavily>=1.1.0",
     "tenacity>=9.1.2",
 ]
