--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ dependencies = [
     "azure-search-documents[aio]>=11.6.0",
     "azure-storage-file-datalake>=12.23.0",
     "fastapi[standard]>=0.128.0",
+    "langchain>=1.2.8",
+    "langchain-azure-ai>=1.0.0",
+    "langchain-openai>=1.1.7",
     "openai>=2.16.0",
     "pandas>=3.0.0",
     "pgvector>=0.4.2",
