--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "azure-search-documents[aio]>=11.6.0",
     "azure-storage-file-datalake>=12.23.0",
     "fastapi[standard]>=0.128.0",
+    "google-genai>=1.62.0",
     "langchain>=1.2.8",
     "langchain-azure-ai>=1.0.0",
     "langchain-openai>=1.1.7",
